assets/styles/styles.css
/* RULES */
@charset "UTF-8";

@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500;700&display=swap');

@font-face {
  font-family: 'LeagueSpartan';
  src: url('../fonts/LeagueSpartan-Bold.otf') format('opentype');
}

/* GENERAL SETTINGS */
* {
  margin: 0;
  padding: 0;
  text-decoration: none;
  border: none;
  box-sizing: border-box;
  color: #000;
}

:root {
  --blue-shade-color: #00ccff;
  --about-txt-font: 'Montserrat', sans-serif;

  font-size: 62.5%;
}

html {
  scroll-behavior: smooth;
}

html,
body {
  height: 100%;
  width: 100%;
}

body {
  font-size: 1.6rem;

  position: relative;
  overflow: overlay;
}

body::-webkit-scrollbar {
  width: 1.2rem;
}

body::-webkit-scrollbar-track {
  background: #292929;
}

body::-webkit-scrollbar-thumb {
  background-color: var(--blue-shade-color);
  border-radius: 2rem;
  border: 0.2rem solid #0e0e0e;
}

.blue--highlight {
  color: #00ccff;
}

.white-section {
  background-color: #f0f0f6;
  padding: 7rem 3rem;
  text-align: center;
}

.white-section__subtitle {
  border-block: 0.2rem solid black;
  color: #000;
  font: normal normal 4rem 'LeagueSpartan';

  text-align: center;
  width: 100%;
  margin-bottom: 5rem;
  padding-block: 2rem;
}

/* OTHERS ------------------------------------- */

.resume-container {
  background-color: rgb(255, 255, 255);
  border-radius: 50rem;

  padding: 0.3rem 1rem;

  position: absolute;
  z-index: 10;
  top: 1%;
  right: 3%;
  transition: 0.3s ease;
}

.resume-container:hover {
  background-color: rgb(0, 204, 255);
}

.resume-container a {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 1rem;

  max-width: max-content;
  transition: 0.3s ease;
}

.resume-container a:hover > .resume p,
.resume-container a:hover > .download-resume svg path {
  color: #fff;
  fill: #fff;
}

.resume p {
  font: normal normal 1.5rem 'LeagueSpartan', sans-serif;
  color: #000;
}

.download-resume svg {
  height: 2.3rem;
}

.download-resume svg path {
  fill: #000;
}

/* SOCIAL ------------------------------------- */

.social {
  background-image: linear-gradient(to right, #00ccff, #102d8d);
  border-radius: 1rem 1rem 2rem 2rem;

  height: 30rem;
  width: 10rem;

  position: fixed;
  z-index: 10;
  top: 23vh;
  transform: translateX(-70%);
  transition: 0.5s ease;
}

.social:hover {
  transform: translateX(10%);
}

.social::after {
  border-bottom: 0.1rem solid #f0f0f6;
  content: 'Social';
  color: #00ccff;
  font: normal bold 2rem 'Source Code Pro', monospace;
  letter-spacing: 0.2rem;

  max-width: fit-content;

  position: absolute;
  top: 50%;
  transform: translate(90%, -50%) rotate(90deg);
}

.social-icons {
  display: flex;
  flex-flow: column wrap;
  justify-content: space-around;
  align-items: center;

  height: 100%;

  position: relative;
}

.icon {
  max-width: fit-content;

  display: none;
  cursor: pointer;
  transition: 0.2s ease-in;
  transform: scale(1.2);
}

.icon path {
  fill: #fff;
  stroke: rgba(0, 38, 255, 0.4);
}

.icon:hover {
  transform: scale(1.6);
}

/* HEADER------------------------------------- */
#header {
  display: flex;
  justify-content: center;
  flex-flow: column wrap;
  min-height: 100vh;
  width: 100%;
}

#header .header-container {
  background: #313131 url('../images/background-opt-2.jpg') center no-repeat
    fixed;
  background-size: cover;
  min-height: 100vh;
  width: 100%;
  position: relative;
}

#header .header-container .header-presentation {
  background-color: rgba(0, 0, 0, 0.4);

  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: column wrap;
  gap: 5rem;

  margin: 0 auto;
  min-height: 100vh;
  width: 100%;
}

.header-presentation h1#header-title {
  font-family: 'Source Code Pro', monospace;
  font-size: 5rem;
  line-height: 8rem;
  color: #fff;
  cursor: default;
  max-width: 50rem;
  width: 100%;

  /* Typewriter Effect */
  overflow: hidden;
  border-right: 0.15em solid #fff;
  white-space: nowrap;
  margin: 0 auto;
  letter-spacing: 0.15em;
  animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
  animation-delay: 0.2s;
}

/* The typing effect */
@keyframes typing {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}

/* The typewriter cursor effect */
@keyframes blink-caret {
  from,
  to {
    border-color: transparent;
  }
  50% {
    border-color: #fff;
  }
}

.header-presentation h1#header-title span#author-name {
  display: inline-block;
  transition: 0.5s ease;
  text-decoration: underline;
}

span#author-name:hover {
  transform: translateY(-25%) rotate(1deg);
}

.header-presentation a {
  display: inline-block;
  border: 0.2rem solid #00ccff;
  background-color: transparent;

  max-height: fit-content;
  max-width: fit-content;
  margin: 0 auto;
  padding: 1rem 3rem;

  font-family: Arial, Helvetica, sans-serif;
  font-size: 2rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  text-align: center;
  transition: 0.5s ease;
}

.header-presentation a:hover {
  background-color: #00ccff;
  color: #fff;
  text-shadow: 0.3rem 0.12rem 0.5rem rgba(0, 0, 0, 0.4);
  border-radius: 1rem;
  transform: scale(1.3) rotate(-1deg);
}

/* ABOUT--------------------------------------- */
#about {
  background-color: #313131;

  min-height: 100vh;
  width: 100vw;
  padding: 7rem 3rem;
}

#about .about-header {
  width: 100%;
  margin-bottom: 2rem;
  position: relative;
}

#about .about-header #about-title {
  color: var(--blue-shade-color);
  text-align: center;
  font: normal 500 4rem 'LeagueSpartan';
}

.about-info {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
  gap: 4rem;

  max-width: 90rem;
  margin: 0 auto;
  position: relative;
}
/* ... */

